# octachore

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
cmake/modules/: FindLeptonica.cmake  FindTesseract.cmake
src/: octachore-node.cpp  octachore.cpp  octachore.hpp  octachore.js  tesseract.js
test/: octachore-test.js  tesseract-test.js
